# pySDP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  changelog.md  contributing.md  getting-started.md  index.md  troubleshooting.md
docs/guides/: cloud-data.md  field-sampling.md  index.md  pretty-maps.md  wrangle-rasters.md
docs/guides/assets/: domains_map.html  pretty_web.html
scripts/: build_guide_assets.py  update_catalog.py
src/pysdp/: __init__.py  _catalog_data.py  _resolve.py  _validate.py  browse.py  catalog.py  constants.py  dates.py  download.py  extract.py  raster.py  stac.py
src/pysdp/data/: SDP_product_table_04_14_2026.csv  SDP_product_table_04_29_2026.csv  __init__.py
src/pysdp/data/manifests/: R6D001.json  R6D002.json
src/pysdp/io/: __init__.py  template.py  vsicurl.py
tests/: conftest.py  test_browse.py  test_catalog.py  test_catalog_data.py  test_download.py  test_extract.py  test_raster.py  test_resolve.py  test_smoke.py  test_template.py  test_validate.py  test_weekly.py
